# RAG-Experiment

./: .dockerignore  .gitignore  README.md  README_zh.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/api/: dependencies.py  main.py
backend/app/cli/: answer_question.py  bootstrap_database.py  build_baseline_evaluation.py  build_noun_candidate_pool.py  chunk_book.py  download_book.py  embed_sample.py  extract_noun_units.py  generate_baseline_rag_answers.py  generate_embeddings.py  ingest_content.py  ingest_embeddings.py  prepare_baseline_packets.py  process_book.py  search_book.py
backend/app/clients/: groq_gpt_oss_client.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: connection.py
backend/app/evaluation/: evaluation_builder.py  judgment_validator.py  metric_calculator.py
backend/app/providers/: gutenberg_provider.py  minilm_provider.py
backend/app/repositories/: experiment_repository.py
backend/app/schemas/: experiments.py  rag_answer.py  rag_answers_file.py  rag_api.py
backend/app/services/: alias_registry.py  answer_generation_service.py  chunking_service.py  cleaning_service.py  (+10 more)
backend/tests/: conftest.py  test_alias_registry.py  test_alias_retrieval_evaluation.py  test_answer_generation_service.py  test_baseline_evaluation_builder.py  test_baseline_packet_generation.py  test_batch_embeddings.py  test_bootstrap_database.py  test_chunking.py  test_cleaning.py  test_content_ingestion.py  test_database_schema.py  test_embedding_ingestion.py  test_embedding_smoke.py  test_exact_vector_search.py  test_expanded_retrieval_service.py  test_experimental_answer_service.py  test_experiments_api.py  test_generate_baseline_rag_answers.py  test_groq_gpt_oss_client.py  test_judgment_validator.py  test_metric_calculator.py  test_noun_candidate_pool.py  test_noun_units_v2a.py  test_query_expansion_service.py  test_rag_answer_service.py  test_rag_api.py  test_rag_prompt_builder.py  test_sections.py
(+117 files in other folders)
