[tool.poetry]
name = "sherlock-rag-lab-backend"
version = "0.1.0"
description = "Backend for Sherlock RAG Lab"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
transformers = "^4.40.0"
huggingface-hub = "^0.23.0"
sentence-transformers = ">=3.0,<6.0"
numpy = ">=1.26,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
