[tool.poetry]
name = "sherlock-rag-lab-backend"
version = "0.1.0"
description = "Backend for Sherlock RAG Lab"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
transformers = "^4.40.0"
huggingface-hub = "^0.23.0"
sentence-transformers = ">=3.0,<6.0"
numpy = ">=1.26,<3.0"
psycopg = {extras = ["binary"], version = ">=3.2,<4.0"}
pgvector = ">=0.5,<1.0"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
torch = { version = ">=2.0,<3.0", source = "pytorch-cpu" }



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.nlp]
optional = true

[tool.poetry.group.nlp.dependencies]
spacy = "3.7.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}

[tool.pytest.ini_options]
markers = [
    "nlp_model: tests that require the optional spaCy model",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
